--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
+.main {
+  height: 100vh;
+  background-image: url(./assets/Day-desktop.jpg);
+  overflow: hidden;
+}
+body {
+  height: 100%;
+  margin: 0;
+}
+.title {
   text-align: center;
+  margin: 0px auto;
+  display: block;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar {
+  border-bottom: 2px solid gray;
+  background-color: transparent;
+  padding-top: 5px;
+  opacity: 0.8;
+  width: 100%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.title {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.searchBar {
+  padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
